# yocto-dgram

./: .clang-format  .gitignore  CMakePresets.json  readme.md
apps/: CMakeLists.txt
apps/dgram/: CMakeLists.txt  dgram.cpp
apps/dscene/: CMakeLists.txt  dscene.cpp
libs/: CMakeLists.txt
libs/yocto/: yocto_bvh.cpp  yocto_bvh.h  yocto_geometry.h  yocto_gui.cpp  yocto_gui.h  yocto_shape.cpp  yocto_shape.h  yocto_trace.cpp  yocto_trace.h
libs/yocto_dgram/: CMakeLists.txt  yocto_bvh.cpp  yocto_bvh.h  yocto_cli.h  yocto_color.h  yocto_dgram.cpp  yocto_dgram.h  yocto_dgram_bvh.cpp  yocto_dgram_bvh.h  yocto_dgram_geometry.h  yocto_dgram_gui.cpp  yocto_dgram_gui.h  yocto_dgram_intersection.h  yocto_dgram_shape.cpp  yocto_dgram_shape.h  yocto_dgram_text.cpp  yocto_dgram_text.h  yocto_dgram_trace.cpp  yocto_dgram_trace.h  yocto_dgramio.cpp  yocto_dgramio.h  yocto_geometry.h  yocto_gui.cpp  yocto_gui.h  yocto_image.cpp  yocto_image.h  yocto_math.h  yocto_modelio.cpp  yocto_modelio.h  yocto_noise.h  yocto_parallel.h  yocto_sampling.h  yocto_scene.cpp  yocto_scene.h  yocto_sceneio.cpp  yocto_sceneio.h  yocto_shape.cpp  yocto_shape.h  yocto_trace.cpp  yocto_trace.h
libs/yocto_dgram/ext/: HTTPRequest.hpp  base64.cpp  base64.h  earcut.hpp
scenes/approxsurf/: normals.json
scenes/bezier/: basis.json  convexhull.json  cusps.json  joining.json  splitting.json
scenes/brdfframe/: arealight.json  arealight2.json  areashadow.json  areashadow2.json  diffuse.json  diffuse2.json  environment.json  mirror.json  pointlight.json  pointshadow.json  roughness.json  transmission.json
scenes/brdfplot/: fdielectric.json  microfacet_brdfcos.json  phong.json  schlick.json  schlickm.json  schlickt.json  shadowing.json
scenes/camera/: eval.json  frame.json  image.json  lighting.json
scenes/compositing/: alpha1.json  alpha2.json  alpha3.json  alpha4.json
scenes/integration/: montecarlo.json
scenes/intersection/: bbox.json  bprims.json  instance.json  line.json  point.json  ray.json  scene.json  slab.json  slabs.json  triangle.json
scenes/introimage/: approximation.json  gamma.json
scenes/intromath/: axisframe.json  compframes.json  coordinates.json  frames.json  operations.json  primitives.json  products.json  rotationframe.json  scalingframe.json  translationframe.json
scenes/lighting/: lambert.json  pointlight.json
scenes/mcintegral/: mcfuncerror.json  mcpierror.json  mcpieval.json
scenes/mcsamples/: disk.json
scenes/meshelements/: indexed2.json
scenes/pisamples/: uniform.json
scenes/placeholder/: missing.json
scenes/subdivc/: allsteps.json  midpoints.json
scenes/subdivs/: allsteps.json  correction.json  midpoints.json  onestep.json
scenes/texcoords/: mapping.json
scenes/tonemapimage/: srgb.json
scenes/tonemapplot/: filmic.json
scenes/transforms/: rotationx.json  rotationy.json  rotationz.json  scalenu.json  scaleu.json  translation.json
scripts/: scenes.sh  test.sh  text_cache.sh
text_server/: format.js  latex.css  server.js
(+103 files in other folders)
